[EDELIVERY-15607] add mail notifications for document review actions and management (e.g create, delete, publish)